# mekai

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/kimi/: acp.rs  agentspec.rs  approval.rs  auth.rs  cancel.rs  cli.rs  config.rs  denwa_renji.rs  error.rs  hooks.rs  llm.rs  mcp.rs  metadata.rs  mod.rs  notifications.rs  plugin.rs  session.rs  session_state.rs  skill.rs  telemetry.rs
src/kimi/background/: manager.rs  mod.rs  tasks.rs
src/kimi/soul/: agent.rs  compaction.rs  context.rs  mod.rs  tools.rs
src/kimi/subagents/: mod.rs  runner.rs  store.rs
src/kimi/ui/: mod.rs  print.rs  shell.rs  vis.rs
src/kimi/utils/: logging.rs  mod.rs  path.rs
src/kimi/wire/: mod.rs  server.rs  types.rs
