[package]
name = "mekai"
version = "0.0.1"
edition = "2024"

[dependencies]
tokio = { version = "1.52", features = ["full"] }
ratatui = "0.29"
crossterm = "0.28"
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.6", features = ["derive"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.12"
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
async-trait = "0.1"
strum = { version = "0.26", features = ["derive"] }
dirs = "6.0"
ignore = "0.4"
walkdir = "2.5"
toml = "0.8"

dashmap = "6.1"
indexmap = { version = "2.7", features = ["serde"] }
serde_yaml = "0.9"
uuid = { version = "1.12", features = ["v4", "serde"] }
futures = "0.3"
parking_lot = "0.12"
tokio-util = "0.7"
async-stream = "0.3"
async-openai = { version = "0.38", features = ["chat-completion", "_api"] }
sanitize-filename = "0.5"
zip = "2.2"
flate2 = "1.0"
tar = "0.4"

[dev-dependencies]
tempfile = "3"
